--- a/index.html
+++ b/index.html
@@ -101,15 +101,7 @@
                         </div>
 
                         <div class="home__img">
-                            <svg class="home__blob" viewBox="0 0 479 467" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                                <mask id="mask0" mask-type="alpha">
-                                    <path fill="#2F4D99" d="M9.19024 145.964C34.0253 76.5814 114.865 54.7299 184.111 29.4823C245.804 6.98884 311.86 -14.9503 370.735 14.143C431.207 44.026 467.948 107.508 477.191 174.311C485.897 237.229 454.931 294.377 416.506 344.954C373.74 401.245 326.068 462.801 255.442 466.189C179.416 469.835 111.552 422.137 65.1576 361.805C17.4835 299.81 -17.1617 219.583 9.19024 145.964Z"/>
-                                </mask>
-                                <g mask="url(#mask0)">
-                                    <path fill="#2F4D99" d="M9.19024 145.964C34.0253 76.5814 114.865 54.7299 184.111 29.4823C245.804 6.98884 311.86 -14.9503 370.735 14.143C431.207 44.026 467.948 107.508 477.191 174.311C485.897 237.229 454.931 294.377 416.506 344.954C373.74 401.245 326.068 462.801 255.442 466.189C179.416 469.835 111.552 422.137 65.1576 361.805C17.4835 299.81 -17.1617 219.583 9.19024 145.964Z"/>
-                                    <image class="home__blob-img" x="12" y="18" href="assets/img/avatar.png"/>
-                                </g>
-                            </svg>
+                            <img src="assets/img/3dlogo.png" alt="3D logo" class="3d">
                         </div>
 
                         <div class="home__data">
@@ -337,31 +329,11 @@
                     <div class="swiper-wrapper">
                         <!--==============Certificate 1================-->
                         <div class="certificate__content grid swiper-slide">
-                            <img src="assets/img/Certificate 1.jpg" alt="Certificate 2" class="certificate__img">
+                            <img src="assets/img/certif1.jpg" alt="Certificate 1" class="certificate__img" style="width: 520px;">
                         </div>
                         <!--==============Certificate 2================-->
                         <div class="certificate__content grid swiper-slide">
-                            <img src="assets/img/Certificate 2.jpg" alt="Certificate 2" class="certificate__img">
-                        </div>
-                        <!--==============Certificate 3================-->
-                        <div class="certificate__content grid swiper-slide">
-                            <img src="assets/img/Certificate 3.jpg" alt="Certificate 2" class="certificate__img">
-                        </div>
-                        <!--==============Certificate 4================-->
-                        <div class="certificate__content grid swiper-slide">
-                            <img src="assets/img/Certificate 4.jpg" alt="Certificate 2" class="certificate__img">
-                        </div>
-                        <!--==============Certificate 5================-->
-                        <div class="certificate__content grid swiper-slide">
-                            <img src="assets/img/Certificate 5.jpg" alt="Certificate 2" class="certificate__img">
-                        </div>
-                        <!--==============Certificate 6================-->
-                        <div class="certificate__content grid swiper-slide">
-                            <img src="assets/img/Certificate 6.jpg" alt="Certificate 2" class="certificate__img">
-                        </div>
-                        <!--==============Certificate 7================-->
-                        <div class="certificate__content grid swiper-slide">
-                            <img src="assets/img/Certificate 7.jpg" alt="Certificate 2" class="certificate__img">
+                            <img src="assets/img/certif2.jpg" alt="Certificate 2" class="certificate__img">
                         </div>
                     </div>
 
