--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <!--====================icon=========================-->
-        <link rel="icon" href="assets/img/icon.png" type="image/png">
-
         <!--==================== UNICONS ====================-->
         <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
         
@@ -16,7 +13,7 @@
         <!--==================== CSS ====================-->
         <link rel="stylesheet" href="assets/css/styles.css">
 
-        <title>Adrian Website</title>
+        <title>NDM Production</title>
     </head>
     <body>
         <!--==================== HEADER ====================-->
@@ -105,9 +102,9 @@
                         </div>
 
                         <div class="home__data">
-                            <h1 class="home__title">Hi, i'm Adrian</h1>
-                            <h3 class="home__subtitle">Data Scientist</h3>
-                            <p class="home__description">School of computing undergraduate student at Telkom University, interested in Artificial Intelligence and Machine Learning</p>
+                            <h1 class="home__title">NDM Production</h1>
+                            <h3 class="home__subtitle">Digital Marketing Agency</h3>
+                            <p class="home__description">Full-service, data-driven digital marketing agency. Striving for the best is important and so is the efficiency of broadcasting your marketing potential digitally.</p>
                             <a href="https://line.me/ti/p/7fF0zWS8Ww " target="_blank" class="button button--flex">
                                 Contact Me<i class="uil uil-comment-message button__icon"></i>
                             </a>
@@ -132,25 +129,25 @@
 
                 <div class="about__data">
                     <p class="about__description">
-                        Allow me to introduce myself in greater detail. I am Adrian Putra Pratama Badjideh, currently pursuing my undergraduate degree at Telkom University. As a second-year student, 
-                        I am dedicated to honing my abilities in the dynamic realm of data science. My primary focus lies in becoming a proficient data scientist, while also acquiring expertise in business analysis. Additionally, I am deeply engrossed in the captivating domains of machine learning and artificial intelligence. Through my studies and practical experiences, I am determined to leverage these cutting-edge technologies to drive meaningful insights, empower decision-making processes, and fuel innovation. With an unwavering commitment to continuous learning, 
-                        I eagerly seek opportunities to contribute my skills and knowledge towards creating transformative solutions in the realm of data science and beyond.
+                        NDM production is a full-service, data driven digital marketing agency. We help great brands to soidify their reputation in customer's minds by creating great content and optimizing their digital marketing channels, as well as improve on digital marketing profit.<br><br>
+                        Our proven digital marketing strategies and techniques make sure that we only market to the right kind of individuals.This ensures the best return on investment for our clients' marketing budget.<br><br>
+                        Striving for the besy is important and so is the efficiency of broadcasting your marketing potential digitally. With the complete package of Digital Marketing Services, Digital Creative Campaign on Social Media or Marketplace and Website Development, all inclusive digital strategy is at the palm of your hand.
                     </p>
 
                     <div class="about__info">
                         <div>
-                            <span class="about__info-title">01</span>
-                            <span class="about__info-name">Years <br> experience</span>
+                            <span class="about__info-title">03+</span>
+                            <span class="about__info-name">Years experience</span>
                         </div>
 
                         <div>
-                            <span class="about__info-title">05</span>
-                            <span class="about__info-name">Projects <br> completed</span>
+                            <span class="about__info-title">08+</span>
+                            <span class="about__info-name">Projects completed</span>
                         </div>
 
                         <div>
-                            <span class="about__info-title">05</span>
-                            <span class="about__info-name">Computing <br> Certification</span>
+                            <span class="about__info-title">02+</span>
+                            <span class="about__info-name">Certification</span>
                         </div>
                     </div>
 
@@ -357,13 +354,12 @@
                 <div class="project__container">
                     <!--=============== Project 1 ================-->
                     <div class="project__content grid">
-                        <img src="assets/img/API.jpg" alt="Project 1" class="project__img">
+                        <img src="assets/img/4.jpg" alt="Project 1" class="project__img">
 
                         <div class="project__data">
                             <h3 class="project__title">Restful API with NodeJS</h3>
-                            <p class="project__description">This backend project is fully made for integrate mongodb and UI of book loaning app. For the specific details you can see by click this link.</p>
 
-                            <a href="https://github.com/GLAZERadr/api.git" class="button button--flex buttom--small project__button" target="_blank">
+                            <a href="https://drive.google.com/file/d/1yo2C9OKs4KZUYCFTw9PMqx07WU9WRZ3o/view?usp=drive_link" class="button button--flex buttom--small project__button" target="_blank">
                                 <i class="uil uil-link-alt button__icon"></i>
                                 View Project
                             </a>
@@ -372,13 +368,12 @@
                         
                     <!--=============== Project 2 ================-->
                     <div class="project__content grid">
-                        <img src="assets/img/portfolio.png" alt="Project 2" class="project__img">
+                        <img src="assets/img/C5.png" alt="Project 2" class="project__img">
 
                         <div class="project__data">
                             <h3 class="project__title">Personal Portfolio</h3>
-                            <p class="project__description">This is my personal portfolio project, build using html, css, and javascript. This website intend to attract people curious about me. All asset is used from an open source</p>
 
-                            <a href="https://github.com/GLAZERadr/GLAZERadr.github.io.git" class="button button--flex buttom--small project__button" target="_blank">
+                            <a href="https://drive.google.com/file/d/1KQ3kD5qGLWDuf7De1PrnXmwBOd9xQJON/view?usp=drive_link" class="button button--flex buttom--small project__button" target="_blank">
                                 <i class="uil uil-link-alt button__icon"></i>
                                 View Project
                             </a>
@@ -387,13 +382,12 @@
 
                     <!--=============== Project 3 ================-->
                     <div class="project__content grid">
-                        <img src="assets/img/ppytorch.jpg" alt="Project 3" class="project__img">
+                        <img src="assets/img/D1.png" alt="Project 3" class="project__img">
 
                         <div class="project__data">
                             <h3 class="project__title">Multi Layer Perceptron Using Pytorch</h3>
-                            <p class="project__description">In this project, i worked to implement Multi Layer Perceptron from Pytorch library. In this case i work with linear data though i make some regressed prediction</p>
 
-                             <a href="https://github.com/GLAZERadr/Multi-Layer-Perceptron-Pytorch.git" class="button button--flex buttom--small project__button", target="_blank">
+                             <a href="https://drive.google.com/file/d/1IAFjic6tuI9MhFsCphFddSGTZhUz2O9L/view?usp=drive_link" class="button button--flex buttom--small project__button", target="_blank">
                                 <i class="uil uil-link-alt button__icon "></i>
                                 View Project
                             </a>
