--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
         
         <!--==================== SWIPER CSS ====================-->
         <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
+
+        <!--==================== icon  ====================-->
+        <link rel="icon" href="assets/img/logo.png" type="image/png">
         
         <!--==================== CSS ====================-->
         <link rel="stylesheet" href="assets/css/styles.css">
