--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                             <div class="skills__list grid">
                                 <div class="skills__data">
                                     <div class="skills__titles">
-                                        <span class="skills__number">80%</span>
+                                        <span class="skills__number">95%</span>
                                     </div>
                                     <div class="skills__bar">
                                         <span class="skills__percentage skills__html"></span>
@@ -230,7 +230,7 @@
                             <div class="skills__list grid">
                                 <div class="skills__data">
                                     <div class="skills__titles">
-                                        <span class="skills__number">75%</span>
+                                        <span class="skills__number">95%</span>
                                     </div>
                                     <div class="skills__bar">
                                         <span class="skills__percentage skills__html"></span>
@@ -370,7 +370,7 @@
             <!--==================== Certification ====================-->
             <section class="certificate section" id="certificate">
                 <h2 class="section__title">My Certificate</h2>
-                <span class="section__subtitle">Computing certificate collection</span>
+                <span class="section__subtitle">Certificate Collection</span>
 
                 <div class="certificate__container container swiper-container">
                     <div class="swiper-wrapper">
