--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
                     <div class="about__buttons">
                         <a download="" href="assets/pdf/CV.pdf" class="button button--flex">
-                            Download My CV<i class="uil uil-file-download-alt button__icon"></i>
+                            Download Company Profile<i class="uil uil-file-download-alt button__icon"></i>
                         </a>
                     </div>
                 </div>
