--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
                         <div class="home__img">
                             <img src="assets/img/3dlogo.png" alt="3D logo" class="3d">
                         </div>
+                    
 
                         <div class="home__data">
                             <h1 class="home__title">NDM Production</h1>
@@ -125,9 +126,36 @@
                 </div>
             </section>
 
+            <!--=====================SERVICE===================-->
+            <section class="service_section">
+                <h2 class="section__title">Our Service</h2>
+                <span class="section__subtitle">What we offer</span>
+
+                <div class="sevice_container">
+                    <div class="service_content grid">
+                        <img src="assets/img/3d-image.png" alt="image" class="service_img">
+                        <h3 class="service__title">Training & Consulting</h3>
+                        <p class="service__description">Membekali tim Anda agar lebih kompeten demi kesuksesan strategi Digital Marketing dalam bisnis.</p>
+                    </div>
+
+                    <div class="service_content grid">
+                        <img src="assets/img/3d-image.png" alt="image" class="service_img">
+                        <h3 class="service__title">Training & Consulting</h3>
+                        <p class="service__description">Membekali tim Anda agar lebih kompeten demi kesuksesan strategi Digital Marketing dalam bisnis.</p>
+                    </div>
+
+                    <div class="service_content grid">
+                        <img src="assets/img/3d-image.png" alt="image" class="service_img">
+                        <h3 class="service__title">Training & Consulting</h3>
+                        <p class="service__description">Membekali tim Anda agar lebih kompeten demi kesuksesan strategi Digital Marketing dalam bisnis.</p>
+                    </div>
+                    
+                </div>
+            </section>
+
             <!--==================== ABOUT ====================-->
             <section class="about__section" id="about">
-                <h2 class="section__title">About Me</h2>
+                <h2 class="section__title">About Company</h2>
                 <span class="section__subtitle">My introduction</span>
 
                 <div class="about__data">
@@ -164,7 +192,7 @@
 
             <!--==================== SKILLS ====================-->
             <section class="skills__section" id="skills">
-                <h2 class="section__title">My Skills</h2>
+                <h2 class="section__title">Company Skills</h2>
                 <span class="section__subtitle">Technical level</span>
 
                 <div class="skills__container container grid">
