--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
                         <div class="service__data">
                             <h3 class="service__title">Digital Marketing</h3>
-                            <p class="service__description">Leveraging our expertise in digital marketing and a deep understanding of the target market, specialize in creating relevant, and inspiring content.</p>
+                            <p class="service__description">Leveraging our expertise in digital marketing and a deep understanding of the target market, specialize in creating relevant.</p>
                         </div>
                     </div>
                         
@@ -199,7 +199,7 @@
             <section class="superiority__section" id="superiority">
                 <div class="super__container">
                     <div class="super__data">
-                        <h2 class="super__title">Why choose us?</h2>
+                        <h2 class="super__title">Why Choose Uas?</h2>
                         <span class="super__subtitle">Because we are committed to providing the best service</span>
                     </div>
 
