--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
                         <div class="service__data">
                             <h3 class="service__title">Digital Marketing</h3>
-                            <p class="service__description">Leveraging our expertise in digital marketing and a deep understanding of the target market, specialize in creating relevant.</p>
+                            <p class="service__description">Leveraging our expertise in digital marketing and a deep understanding of the target market, creating relevant.</p>
                         </div>
                     </div>
                         
