--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
                         <div class="service__data">
                             <h3 class="service__title">Design for Digital Media</h3>
-                            <p class="service__description">Guaranted digital content creation services to help business promotion strategies through Digital Marketing.</p>
+                            <p class="service__description">Guaranted digital content creation services to help the business promotion strategies through Digital Marketing.</p>
 
                         </div>
                     </div>
