--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             <section class="superiority__section" id="superiority">
                 <div class="super__container">
                     <div class="super__data">
-                        <h2 class="super__title">Why Choose Uas?</h2>
+                        <h2 class="super__title">Why Choose Us?</h2>
                         <span class="super__subtitle">Because we are committed to providing the best service</span>
                     </div>
 
