--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                         <div class="super-icon">
                             <i class="uil uil-medal super_icon"></i>
                             <h3 class="super-title">Guaranted</h3>
-                            <p class="super-description">Has been guaranted for handling any level of brand from micro, small, medium, even multinational company.</p>
+                            <p class="super-description">Has been guaranted for handling any level of brand from micro, small, medium company.</p>
                         </div>
 
                     </div>
@@ -323,9 +323,9 @@
                         <span class="certif__subtitle">Certificate Collection</span>
                     </div>
                     <!--==============Certificate 1================-->
-                    <img src="assets/img/certif-1.png" alt="Certificate 1" class="certif__img">
+                    <img src="assets/img/certif-1.png" alt="Certificate 1" class="certif__img1">
                     <!--==============Certificate 2================-->
-                    <img src="assets/img/certif-2.png" alt="Certificate 2" class="certif__img">
+                    <img src="assets/img/certif-2.png" alt="Certificate 2" class="certif__img2">
                     
                 </div>
 
