--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                 <div class="certif__container">
                     <div class="certif__data">
                         <h2 class="certif__title">Certificate</h2>
-                        <span class="certif__subtitle">Certificate Collection</span>
+                        <span class="certif__subtitle">Certification By</span>
                     </div>
                     <!--==============Certificate 1================-->
                     <img src="assets/img/certif-1.png" alt="Certificate 1" class="certif__img1">
