--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             </section>
 
             <!--==================OUR SUPERIORITY=============-->
-            <section class="superiority__section" id="superiority">
+            <section class="superiority__section">
                 <div class="super__container">
                     <div class="super__data">
                         <h2 class="super__title">Why Choose Us?</h2>
@@ -345,8 +345,6 @@
                             <img src="assets/img/activity-3.jpg" alt="activity-3" class="activity__img">
                         </div>
                     </div>
-
-                    <div class="swiper-pagination"></div>
                 </div>
             </section>
 
